# OChess

./: .gitignore  .gitlab-ci.yml  .ocamlformat  OChess.opam  README.md  dune-project  log.md
lib/: affichage.ml  affichage.mli  algebrique.ml  algebrique.mli  debug.ml  dune  echiquier.ml  echiquier.mli  fen.ml  fen.mli  partie.ml  partie.mli  piece.ml  piece.mli  reglesBasiques.ml  reglesBasiques.mli
lib/debug/: debug.ml  dune
lib/entreeSortie/: affichage.ml  affichage.mli  algebrique.ml  algebrique.mli  choix.ml  choix.mli  dune  fen.ml  fen.mli
lib/jeu/: dune  echiquier.ml  echiquier.mli  partie.ml  partie.mli  piece.ml  piece.mli
lib/joueurs/: dune  humain.ml  joueurs.ml
lib/regles/: dune  regles.ml  reglesBasiques.ml  reglesBasiques.mli  reglesCrazyhouse.ml  reglesRoiDeLaColine.ml  reglesTroisEchecs.ml
test/: dune  testAffichage.expected  testAffichage.ml  testAlgebrique.ml  testCrazyhouse.ml  testEchiquier.ml  testFen.ml  testPartie.ml  testPiece.ml  testRegles.ml  testRoiDeLaColine.ml  testTroisEchecs.ml  testUtil.ml  test_mat_pat_roque.txt
